--- a/Packages/User/SConscript
+++ b/Packages/User/SConscript
@@ -29,7 +29,7 @@ clone.Prepend(LIBS = ['loos'])
 
 
 
-apps = 'model_tool_template traj_tool_template'
+apps = 'model_tool traj_tool simple_model_tool simple_model_output'
 
 list = []
 
