Added ***EDIT*** comments near lines that should be changed by user
svn path=/software/LOOS/branches/Reorganization-2011/; revision=6067

--- a/Packages/User/SConscript
+++ b/Packages/User/SConscript
@@ -29,7 +29,7 @@ clone.Prepend(LIBS = ['loos'])
 
 
 
-apps = 'model_calc traj_calc simple_model_calc simple_model_transform'
+apps = 'model_calc traj_calc simple_model_calc simple_model_transform traj_transform'
 
 list = []
 
