--- a/Packages/User/SConscript
+++ b/Packages/User/SConscript
@@ -27,9 +27,12 @@ Import('env')
 clone = env.Clone()
 clone.Prepend(LIBS = ['loos'])
 
-
-
 apps = 'model_calc traj_calc simple_model_calc simple_model_transform traj_transform'
+
+# ***EDIT***
+# To use, add the base filename for your tools to the apps string
+# below (see the above example)
+#apps = ''
 
 list = []
 
