Templated subtractAverage() and moved cosineContent() into bcomlib.hpp.  The cpp file is now unused
svn path=/software/LOOS/trunk/; revision=6295

--- a/Packages/Convergence/SConscript
+++ b/Packages/Convergence/SConscript
@@ -43,7 +43,7 @@ for name in Split(apps):
 
 ### Library generation
 # Be sure to add new modules/headers here!!!
-library_sources = 'bcomlib.cpp fid-lib.cpp'
+library_sources = 'fid-lib.cpp'
 library_headers = 'bcomlib.hpp fid-lib.hpp'
 
 loos_convergence = clone.Library('loos_convergence', Split(library_sources))
