--- a/Packages/Convergence/SConscript
+++ b/Packages/Convergence/SConscript
@@ -52,7 +52,7 @@ clone.Prepend(LIBPATH=['#/Packages/Convergence'])
 
 
 # Tools requiring the above library
-dependent = 'bcom boot_bcom ufidpick assign_frames decorr_time coscon'
+dependent = 'bcom boot_bcom ufidpick assign_frames decorr_time coscon qcoscon'
 for name in Split(dependent):
     fname = name + '.cpp'
     prog = clone.Program(fname)
