--- a/Packages/Convergence/SConscript
+++ b/Packages/Convergence/SConscript
@@ -33,7 +33,7 @@ scripts = 'bootstrap_overlap.pl effsize.pl'
 # Stand-alone apps...
 
 list = []
-apps = 'fidpick sortfids hierarchy neff block_average avgconv block_avgconv'
+apps = 'fidpick sortfids hierarchy neff block_average avgconv block_avgconv expfit'
 
 for name in Split(apps):
     fname = name + '.cpp'
