Calculates the cosine content in a loos matrix - made to work on right singular vector matrices...
svn path=/software/LOOS/trunk/; revision=7450

--- a/Packages/Convergence/SConscript
+++ b/Packages/Convergence/SConscript
@@ -52,7 +52,7 @@ clone.Prepend(LIBPATH=['#/Packages/Convergence'])
 
 
 # Tools requiring the above library
-dependent = 'bcom boot_bcom ufidpick assign_frames decorr_time coscon qcoscon'
+dependent = 'bcom boot_bcom ufidpick assign_frames decorr_time coscon qcoscon rsv-coscon'
 for name in Split(dependent):
     fname = name + '.cpp'
     prog = clone.Program(fname)
