updated documentation for inclusion of the potential_profile tool
svn path=/software/LOOS/trunk/; revision=7600

--- a/Tools/SConscript
+++ b/Tools/SConscript
@@ -43,7 +43,7 @@ for name in Split(apps):
 
 PREFIX = env['PREFIX']
 
-apps = apps + ' blurrogram.pl'
+apps = apps + ' blurrogram.pl potential_profile.py'
 
 loos_tools = env.Install(PREFIX + '/bin', Split(apps))
 env.Alias('tools_install', loos_tools)
