Shared library build is now the default...pyloos does not know this yet...
svn path=/software/LOOS/branches/SharedLoos/; revision=7670

--- a/Packages/Convergence/SConscript
+++ b/Packages/Convergence/SConscript
@@ -22,9 +22,10 @@
 import sys
 
 Import('env')
+Import('loos')
 
 clone = env.Clone()
-clone.Prepend(LIBS = ['loos'])
+clone.Prepend(LIBS = [loos])
 
 # Scripts
 
