--- a/Packages/DensityTools/SConscript
+++ b/Packages/DensityTools/SConscript
@@ -38,7 +38,7 @@ clone.Prepend(LIBPATH=['#/Packages/DensityTools'])
 clone.Prepend(CPPPATH='#/Packages/DensityTools')
 
 
-apps = 'gridinfo grid2ascii grid2xplor gridgauss gridscale gridslice gridmask blobid contained gridstat peakify pick_blob blob_stats water-inside water-extract'
+apps = 'gridinfo grid2ascii grid2xplor gridgauss gridscale gridslice gridmask blobid contained gridstat peakify pick_blob blob_stats water-inside water-extract near_blob'
 apps += ' water-hist water-count water-sides'
 
 list = []
