--- a/Packages/DensityTools/SConscript
+++ b/Packages/DensityTools/SConscript
@@ -39,7 +39,7 @@ clone.Prepend(CPPPATH='#/Packages/DensityTools')
 
 
 apps = 'gridinfo grid2ascii grid2xplor gridgauss gridscale gridslice gridmask blobid contained gridstat peakify pick_blob blob_stats water-inside water-extract'
-apps += ' water-hist water-count water-sides near_blob griddiff'
+apps += ' water-hist water-count water-sides blob_contact griddiff'
 
 list = []
 
