Developing inter/intra-mol hbonds for Pengyu (probably somewhere between blastula and gastrula stage...)
svn path=/software/LOOS/trunk/; revision=8137

--- a/Packages/HydrogenBonds/SConscript
+++ b/Packages/HydrogenBonds/SConscript
@@ -43,7 +43,11 @@ list.append(hbonds)
 hmatrix = clone.Program('hmatrix', ['hmatrix.cpp', hcore])
 list.append(hmatrix)
 
-install_apps = 'hbonds hcorrelation hmatrix'
+hcontacts = clone.Program('hcontacts', ['hcontacts.cpp', hcore])
+list.append(hcontacts)
+
+
+install_apps = 'hbonds hcorrelation hmatrix hcontacts'
 
 loos_tools = env.Install(PREFIX + '/bin', Split(install_apps))
 env.Alias('h_tools_install', loos_tools)
