--- a/Tests/SConscript
+++ b/Tests/SConscript
@@ -103,7 +103,7 @@ env.Append(BUILDERS = {'UnitTest' :  bld})
 
 ### Ok, you can open 'em now...
 
-non_testable_tests = 'timeseries-test find_perf_test ccpdb_test pdbtraj_test tinker_arc_test'
+non_testable_tests = 'timeseries-test find_perf_test ccpdb_test pdbtraj_test tinker_arc_test rewind-test'
 pdb_based_tests = 'pdb-tests alignment-tests parser-tests pdb-echo'
 tinker_tests = 'tinkerxyz-tests'
 solo_tests = 'principal-axes-tests atomic-group-test timeseries-test matrix_test hybrid36 within-test'
