Added tool to average grids together
svn path=/software/LOOS/trunk/; revision=9328

--- a/Packages/DensityTools/SConscript
+++ b/Packages/DensityTools/SConscript
@@ -44,8 +44,10 @@ clone.Prepend(LIBPATH=['#/Packages/DensityTools'])
 clone.Prepend(CPPPATH='#/Packages/DensityTools')
 
 
-apps = 'gridinfo grid2ascii grid2xplor gridgauss gridscale gridslice gridmask blobid contained gridstat peakify pick_blob blob_stats water-inside water-extract'
+apps = 'gridinfo grid2ascii grid2xplor gridgauss gridscale gridslice gridmask blobid'
+apps += ' contained gridstat peakify pick_blob blob_stats water-inside water-extract'
 apps += ' water-hist water-count water-sides blob_contact griddiff near_blobs gridautoscale'
+apps += ' gridavg'
 
 list = []
 
