--- a/Packages/ElasticNetworks/SConscript
+++ b/Packages/ElasticNetworks/SConscript
@@ -28,7 +28,7 @@ Import('loos')
 clone = env.Clone()
 clone.Prepend(LIBS = [loos])
 
-apps = 'gnm enmovie psf-masses heavy-ca eigenflucc'
+apps = 'gnm enmovie psf-masses heavy-ca eigenflucc gnm-traj'
 
 list = []
 
