Would help to have an update SConscript when adding a new tool, woudln't it?
svn path=/software/LOOS/branches/TrajicENM/; revision=10925

--- a/Packages/ElasticNetworks/SConscript
+++ b/Packages/ElasticNetworks/SConscript
@@ -55,8 +55,11 @@ list.append(vsa)
 anm = clone.Program('anm.cpp')
 list.append(anm)
 
+anm_traj = clone.Program('anm-traj.cpp')
+list.append(anm_traj)
+
 # Update to include the above apps
-apps = apps + ' vsa anm'
+apps = apps + ' vsa anm anm_traj'
 
 
 
