--- a/Packages/ElasticNetworks/SConscript
+++ b/Packages/ElasticNetworks/SConscript
@@ -58,8 +58,11 @@ list.append(anm)
 anm_traj = clone.Program('anm-traj.cpp')
 list.append(anm_traj)
 
+anm_otraj = clone.Program('anm-otraj.cpp', LIBS=[clone['LIBS'], 'boost_thread'])
+list.append(anm_otraj)
+
 # Update to include the above apps
-apps = apps + ' vsa anm anm_traj'
+apps = apps + ' vsa anm anm_traj anm_otraj'
 
 
 
