Fixes required by rename
svn path=/software/LOOS/branches/TrajicENM/; revision=11037

--- a/Packages/ElasticNetworks/SConscript
+++ b/Packages/ElasticNetworks/SConscript
@@ -58,11 +58,11 @@ list.append(anm)
 anm_traj = clone.Program('anm-traj.cpp')
 list.append(anm_traj)
 
-anm_otraj = clone.Program('anm-otraj.cpp', LIBS=[clone['LIBS'], 'boost_thread'])
-list.append(anm_otraj)
+anmo_traj = clone.Program('anmo-traj.cpp', LIBS=[clone['LIBS'], 'boost_thread'])
+list.append(anmo_traj)
 
 # Update to include the above apps
-apps = apps + ' vsa anm anm_traj anm_otraj'
+apps = apps + ' vsa anm anm_traj anmo_traj'
 
 
 
