MacOS requires boost_system be linked
svn path=/software/LOOS/trunk/; revision=11056

--- a/Packages/ElasticNetworks/SConscript
+++ b/Packages/ElasticNetworks/SConscript
@@ -56,7 +56,7 @@ anm = clone.Program('anm.cpp')
 list.append(anm)
 
 # Special handling to include boost threads
-anmo_traj = clone.Program('anmo-traj.cpp', LIBS=[clone['LIBS'], 'boost_thread'])
+anmo_traj = clone.Program('anmo-traj.cpp', LIBS=[clone['LIBS'], 'boost_thread', 'boost_system'])
 list.append(anmo_traj)
 
 # Update to include the above apps
