Revamping build process
svn path=/software/LOOS/trunk/; revision=11102

--- a/Packages/ElasticNetworks/SConscript
+++ b/Packages/ElasticNetworks/SConscript
@@ -55,14 +55,14 @@ list.append(vsa)
 anm = clone.Program('anm.cpp')
 list.append(anm)
 
-# Special handling to include boost threads
-if (env['platform'] == 'cygwin'):
-    thread_libs = 'boost_thread-mt boost_system-mt'
-else:
-    thread_libs = 'boost_thread boost_system'
+## Special handling to include boost threads
+#if (env['platform'] == 'cygwin'):
+#    thread_libs = 'boost_thread-mt boost_system-mt'
+#else:
+#    thread_libs = 'boost_thread boost_system'
 
     
-anmo_traj = clone.Program('anmo-traj.cpp', LIBS=[clone['LIBS'], Split(thread_libs)])
+anmo_traj = clone.Program('anmo-traj.cpp')
 list.append(anmo_traj)
 
 # Update to include the above apps
